# agent2agent

./: .env  .gitignore  Dockerfile.product_catalog  agent-card.json  customer_support.py  docker_instructions.txt  product_catalog.py  pyproject.toml  requirements.txt  software_design.md
agent2agent.egg-info/: SOURCES.txt  requires.txt  top_level.txt
